--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animation Website </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div id="nav">
         <h3><b>CYBER</b>FICTION*</h3>
-        <button>APRIL,2023</button>
+        <button>APRIL,2024</button>
     </div>
     <div id="main">
         <div id="page">
